resnet model update

--- a/config.yaml
+++ b/config.yaml
@@ -7,18 +7,30 @@ result_dir: "./checkpoints"
 
 # Model params
 model: 
-  class: "BaseMelCNN"
-  params: {}
+  class: "ResNet"
+  params: {'block' : 'BasicBlock','num_classes' : 1} # 
+
+####ResNet Params######
+# block: Type[Union[BasicBlock, Bottleneck]],
+# layers: List[int] = [3,4,6,3],
+# num_classes: int = 1000,
+# zero_init_residual: bool = False,
+# groups: int = 1,
+# width_per_group: int = 64,
+# replace_stride_with_dilation: Optional[List[bool]] = None,
+# norm_layer: Optional[Callable[..., nn.Module]] = None
+
+
 
 # Train params
 feature_type: "mel"
-epochs: 10
-batch_size: 16
+epochs: 50
+batch_size: 64
 optimizer: "Adam"
-lr: 0.01
+lr: 0.0001
 
 # etc.
 seed: 1234
 use_wandb: true
-wandb_entity: "dnltjdwls1"
+wandb_entity: "incheonnationaluniv"
 wandb_project: "ML_2024"
