--- a/config.yaml
+++ b/config.yaml
@@ -1,51 +1,49 @@
-# File & directories
-train_dir: "./dataset/raw16k/train/"
-train_ctl: "./fmcc_train.ctl"
-val_dir: "./dataset/raw16k/test/"
-val_ctl: "./fmcc_test_ref.ctl"
-result_dir: "./checkpoints"
-
-fmax: 4000
-n_mfcc: 64
-
-# Model params
-model: 
-  target: "BaseCNN"
-  params: {
-    in_channel: 1,
-    out_channel: 1,
-    kernel_size: [7, 7, 7, 7],
-    dims: [64, 128, 256, 512],
-    do_pooling: [true, true, true, true],
-    pooling: 'AvgPool2d',
-    dropout: 0.2,
-    activation: 'ReLU',
-    normalize: 'BatchNorm2d',
-    fc_dim: null, # If null, will dynamically calculate the fc dim
-  } 
-
-# Optimizer params
-optimizer:
-  target: "AdamW"
-  params: {}
-
-# LR, Scheduler params
-lr: 0.0005
-scheduler:
-  target: "CosineAnnealingLR"
-  params: {
-    "T_max": 200,
-    "eta_min": 0
-  }
-
-# Train params
-epochs: 1000
 batch_size: 32
-label_smoothing: 0.05
-
-# etc.
 debug: false
+epochs: 1000
+fmax: 4000
+label_smoothing: 0.05
+lr: 5.0e-05
+model:
+  params:
+    activation: ReLU
+    dims:
+    - 64
+    - 128
+    - 128
+    - 256
+    do_pooling:
+    - true
+    - true
+    - true
+    - true
+    dropout: 0.2
+    fc_dim: null
+    in_channel: 1
+    kernel_size:
+    - 7
+    - 7
+    - 7
+    - 7
+    normalize: BatchNorm2d
+    out_channel: 1
+    pooling: AvgPool2d
+  target: BottleNeckCNN
+n_mfcc: 64
+optimizer:
+  params: {}
+  target: AdamW
+result_dir: ./checkpoints
+scheduler:
+  params:
+    T_max: 200
+    eta_min: 0
+  target: CosineAnnealingLR
 seed: 1234
+train_ctl: ./fmcc_train.ctl
+train_dir: ./dataset/raw16k/train/
 use_wandb: false
-wandb_entity: "incheonnationaluniv"
-wandb_project: "ML_2024"
+val_ctl: ./fmcc_test_ref.ctl
+val_dir: ./dataset/raw16k/test/
+wandb_entity: incheonnationaluniv
+wandb_project: ML_2024
